# coinshift-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  SWAP_TESTING_GUIDE.md  deny.toml  stdout.txt
.github/workflows/: build_docker.yaml  check_lint_build.yaml
app/: Cargo.toml  app.rs  cli.rs  main.rs  rpc_server.rs
app/gui/: block_explorer.rs  console_logs.rs  l1_config.rs  mempool_explorer.rs  miner.rs  mod.rs  util.rs  withdrawals.rs
app/gui/coins/: transfer_receive.rs  tx_builder.rs  tx_creator.rs  utxo_creator.rs  utxo_selector.rs
app/gui/parent_chain/: info.rs  transfer.rs
app/gui/swap/: create.rs  detail.rs  list.rs  mod.rs
cli/: Cargo.toml  lib.rs  main.rs
docs/: 1_start_mainchain.sh  2_start_parentchain.sh  3_start_enforcer.sh  4_mine_blocks.sh  5_start_litecoin.sh  5a_litecoin_generate_address.sh  5b_litecoin_check_balance.sh  5c_mine_litecoin.sh  5d_send_litecoin.sh  5e_mine_to_checkpoint.sh  5f_clear_litecoin_mempool.sh  ADDING_PARENT_CHAINS.md  BTC_MAINCHAIN_LTC_PARENTCHAIN_SETUP.md  COINSHIFT_HOW_IT_WORKS.md  ENFORCER_WALLET_GUIDE.md  INTEGRATION_TESTS_GUIDE.md  MANUAL_SETUP_COMMANDS.md  MANUAL_SETUP_SWAP_REGTEST.md  OPEN_SWAP_PLAN.md  SCRIPTS_OVERVIEW.md  SETUP_COMMANDS.md  SETUP_ORDER.md  SWAP_IMPLEMENTATION_NOTES.md  SWAP_PHASE1_LTC_ZEC_SPV.md  SWAP_RPC_REFERENCE.md  SWAP_SAVE_RESTORE_PROCESS.md  SWAP_SEQUENCE_DIAGRAM.md  SWAP_TESTING_GUIDE.md  Step by Step.md  _env.sh  _litecoin_env.sh  coinshift_how_it_works.md  create_enforcer_wallet.sh  create_sidechain_proposal.json  fund_enforcer_wallet.sh  get_raw_transaction.sh  merkle_vs_header_chain_explanation.md  mine_with_enforcer.sh  run_integration_tests.sh  setup-env.sh  (+6 more)
docs/specs/: swap-implementation-spec.md
integration_tests/: Cargo.toml  DECOUPLING_ACTION_PLAN.md  DECOUPLING_PLAN.md  MANUAL_SWAP_TESTING.md  README.md  SWAP_SERIALIZATION_ISSUE.md  Untitled  confirmations_block_inclusion.rs  example.env  ibd.rs  integration_test.rs  l1_rpc_dependency.rs  l1_txid_uniqueness.rs  l1_verification_rpc_only.rs  main.rs  multi_node_verification.rs  setup.rs  setup_test.rs  swap_creation.rs  test_swap_database.rs  test_swap_field_by_field.rs  test_swap_invalid_tag_encoding.rs  test_swap_l1_amount.rs  test_swap_minimal.rs  test_swap_serialization.rs  unknown_withdrawal.rs  util.rs
lib/: Cargo.toml  archive.rs  bitcoin_rpc.rs  lib.rs  miner.rs  parent_chain_rpc.rs  wallet.rs
lib/net/: mod.rs
lib/net/peer/: message.rs
lib/node/: mainchain_task.rs  mod.rs  net_task.rs
lib/spv/: ltc.rs  ltc_builder.rs  mod.rs
lib/state/: block.rs  bmm_reports.rs  error.rs  header_chain.rs  mod.rs  swap.rs  two_way_peg_data.rs
lib/types/: header_chain.rs  header_chain_test.rs  l1_report.rs  merkle.rs  merkle_test.rs  mod.rs  proto.rs  swap.rs  transaction.rs
rpc-api/: Cargo.toml  lib.rs  schema.rs
scripts/: README.md  derive_privkey.py  setup.sh  test_swap.sh
scripts/regtest/: 2_start_parentchain.sh  4_mine_blocks.sh  README.md  generate_addresses.sh  get_raw_transaction.sh  get_txs_from_address.sh  init_coinshift_app.sh  mine_with_enforcer.sh  send_from.sh  unlock_enforcer_wallet.sh
