[package]
name = "coinshift_app_cli"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
dirs = "5.0.1"
hex = "0.4.3"
clap = { version = "4.5.4", features = ["derive"] }
http = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client"] }
serde_json = { workspace = true }
coinshift = { path = "../lib" }
coinshift_app_rpc_api = { path = "../rpc-api" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.5.4"
utoipa = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true

[lib]
name = "coinshift_app_cli_lib"
path = "lib.rs"

[[bin]]
name = "coinshift_app_cli"
path = "main.rs"
