[package]
name = "coinshift_integration_tests"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
coinshift = { path = "../lib" }
bitcoin = { workspace = true }
bincode = { workspace = true }
heed = "0.21.0"
hex = "0.4.3"
serde = { workspace = true, features = ["derive"] }
sneed = { version = "0.0.11", features = ["observe"] }
tempfile = "3.8.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
anyhow = { workspace = true }
bip300301_enforcer_lib = { workspace = true }
bip300301_enforcer_integration_tests = { workspace = true }
bitcoin = { workspace = true }
borsh = "1.3.1"
clap = { workspace = true }
dotenvy = "0.15.7"
futures = { workspace = true }
hex = "0.4.3"
jsonrpsee = { workspace = true }
libtest-mimic = "0.8.1"
reserve-port = "2.0.1"
serde_json = { workspace = true }
thiserror = { workspace = true }
coinshift = { path = "../lib" }
coinshift_app_rpc_api = { path = "../rpc-api" }
tracing = { workspace = true }
tracing-indicatif = "0.3.8"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
bincode = { workspace = true }

[features]
default = ["rustls"]
openssl = ["bip300301_enforcer_lib/openssl", "bip300301_enforcer_integration_tests/openssl"]
rustls = ["bip300301_enforcer_lib/rustls", "bip300301_enforcer_integration_tests/rustls"]

[lints]
workspace = true

# Examples are checked by default, but not run as tests by default
[[example]]
name = "integration_tests"
path = "main.rs"
harness = false
test = false
crate-type = ["bin"]

# Commented out - these binary targets reference files that don't exist
# [[bin]]
# name = "test_swap_serialization"
# path = "test_swap_serialization.rs"
#
# [[bin]]
# name = "test_swap_minimal"
# path = "test_swap_minimal.rs"
#
# [[bin]]
# name = "test_swap_field_by_field"
# path = "test_swap_field_by_field.rs"
#
# [[bin]]
# name = "test_swap_l1_amount"
# path = "test_swap_l1_amount.rs"
#
# [[bin]]
# name = "test_swap_invalid_tag_encoding"
# path = "test_swap_invalid_tag_encoding.rs"
#
# [[bin]]
# name = "test_swap_database"
# path = "test_swap_database.rs"